# financeTechStack

./: .dockerignore  .gitignore  ALPHA_VANTAGE_SETUP.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DATA_MERGE.md  DEPLOYMENT_CHECKLIST.md  DOCKER_TEST_RESULTS.md  FEATURE_SUMMARY_DEC2025.md  QUICK_REFERENCE.md  README.md  TESTING.md  TODO.md  alpha_vantage.py  app.py  config.csv.template  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run_dashboard.sh  run_tests.py  setup_dashboard.py  test_integration.py
.github/: copilot-instructions.md
archive/: README.md
deploy/: aws-ecs-deploy.sh  ecs-task-definition.json
docker/: Dockerfile  Dockerfile.dask-py313  Dockerfile.prefect-worker  docker-compose.dask.yml
docs/: API.md  BUILD_AND_TEST_REPORT.md  CODE_REVIEW.md  COMPLETION_REPORT.md  DASK_COILED_QUICK_REFERENCE.md  DASK_COILED_RECOMMENDATIONS.md  DOCKER.md  FUTURE_WORK.md  IMPROVEMENTS_CHECKLIST.md  INDEX.md  INSTALL.md  METRICS_SUMMARY.md  NEWS_ANALYSIS.md  PORTFOLIO_ANALYSIS.md  PORTFOLIO_COMPLETION_REPORT.md  PORTFOLIO_FLOWS.md  PORTFOLIO_FLOWS_COMPLETION_REPORT.md  PORTFOLIO_FLOWS_FILE_INDEX.md  PORTFOLIO_FLOWS_IMPLEMENTATION.md  PORTFOLIO_FLOWS_QUICK_REFERENCE.md  PORTFOLIO_TEST_REPORT.md  PROJECT_SUMMARY.md  README.md  REVIEW_SUMMARY.md  SEC_403_CODE_TEMPLATES.md  SEC_403_IMPLEMENTATION.md  SEC_403_QUICK_REFERENCE.md  SEC_403_README.md  SEC_403_SOLUTIONS.md  STRUCTURE.md  TESTING.md
examples/: examples_backtesting.py  news_analysis_example.py  run_backtesting_examples.py
scripts/: backfill_historical_data.py  backfill_performance_demo.py  check_historical_data.py  docker-test.sh  fix_data_gaps.py  prefect_manager.py
src/: __init__.py  advanced_analytics_flows.py  alpha_vantage.py  analytics_flows.py  analytics_report.py  backtesting_engine.py  cache.py  config.py  constants.py  crypto_analytics.py  dask_analysis_flows.py  dask_integrated_flows.py  dask_integration.py  dask_portfolio_flows.py  dasks_flow_simple.py  data_merge.py  data_pipeline_robustness.py  exceptions.py  fixed_income_analysis.py  fx_rates.py  main.py  news_advanced_analytics.py  news_analysis.py  news_analysis_streamlit.py  news_flows.py  observability.py  options_analysis.py  options_strategy_automation.py  parquet_db.py  pipeline_robustness_integration.py  portfolio_analytics.py  portfolio_analytics_advanced_flow.py  portfolio_flows.py  portfolio_fundamentals.py  portfolio_holdings.py  portfolio_main.py  portfolio_optimization.py  portfolio_prices.py  portfolio_prices_streamlit.py  portfolio_risk.py  (+8 more)
tests/: README_SELENIUM_TESTING.md  conftest.py  requirements-test.txt  run_final_validation.py  run_tests.py  run_tests.sh  test_advanced_analytics.py  test_analytics_report.py  test_backtesting_engine.py  test_backtesting_setup.py  test_cache.py  test_comprehensive_ui.py  test_comprehensive_ui_fixed.py  test_crypto_analytics.py  test_dask_analysis_flows.py  test_data_pipeline_robustness.py  test_fx_rates.py  test_integration.py  test_news_advanced_analytics.py  test_news_analysis.py  test_observability.py  test_options_strategy_automation.py  test_parquet_db.py  test_portfolio_analytics.py  test_portfolio_flows.py  test_portfolio_fundamentals.py  test_portfolio_holdings.py  test_portfolio_integration.py  test_portfolio_main.py  test_xbrl.py  (+10 more)
(+54 files in other folders)
