[project]
name = "techstack"
version = "0.1.0"
description = "Prefect-based SEC filings scraper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prefect>=3.6.4",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
